# neura

./: .env.example  .gitignore  KNOWN_ISSUES.md  LICENSE  README.md  SYSTEM_MAP.md  capsule-webserver.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: integration_catalog.json  remote_capsules.yaml
logs/: error-report-2026-04-02_17.md  error-report-2026-04-02_18.md  error-report-2026-04-02_19.md  error-report-2026-04-02_20.md  error-report-2026-04-02_21.md  error-report-2026-04-02_22.md  error-report-2026-04-02_23.md  error-report-2026-04-03_00.md  error-report-2026-04-03_01.md  error-report-2026-04-03_02.md  error-report-2026-04-03_03.md  error-report-2026-04-03_04.md  error-report-2026-04-03_05.md  error-report-2026-04-03_06.md  error-report-2026-04-03_07.md  error-report-2026-04-03_08.md  error-report-2026-04-03_09.md  error-report-2026-04-03_10.md  error-report-2026-04-03_11.md  error-report-2026-04-03_12.md  error-report-2026-04-03_13.md  error-report-2026-04-03_16.md  error-report-2026-04-03_17.md  error-report-2026-04-03_18.md  error-report-2026-04-03_19.md  error-report-2026-04-03_20.md  error-report-2026-04-03_21.md  error-report-2026-04-03_22.md  error-report-2026-04-03_23.md  error-report-2026-04-04_00.md  error-report-2026-04-04_01.md  error-report-2026-04-04_02.md  error-report-2026-04-04_03.md  error-report-2026-04-04_04.md  error-report-2026-04-04_05.md  error-report-2026-04-04_06.md  error-report-2026-04-04_07.md  error-report-2026-04-04_08.md  error-report-2026-04-04_09.md  error-report-2026-04-04_10.md  (+77 more)
scripts/: crash-alert.py  (+26 more)
(+424 files in other folders)
